# cpprust

./: .gitignore  Cargo.toml  Makefile
cppmain/: .gitignore  Makefile  main.cpp
rustlib/: Cargo.toml  build.rs
rustlib/include/: rustlib.h
rustlib/src/: lib.rs
