[package]
name = "rustlib"
version = "0.1.0"
authors = ["Daisuke Kato <kato.daisuke429@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rustlib"
crate-type = ["staticlib"]

[dependencies]
ndarray = "0.13.0"

[build-dependencies]
cbindgen = "0.9.1"
